# pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
airflow/: prueba.py
airflow/dags/: pipeline.py  retailco_pipeline.py
airflow/dags/sql/: schema.sql
docs/: dashboard_docs.md  eda_reporte.md  graficos_docs.md  modelado_docs.md  pipeline_docs.md  storytelling_docs.md
master/: .env.template  docker-compose.yml
pipelines/dags/: echandia.py  example_dag.py  pipeline.py  prueba.py
pipelines/tasks/echandia/: task1.py
pipelines/tasks/example_dag/: task1.py
scripts/: 01_python_puro.py  02_eda.py  03_limpieza_carga.py  04_analisis.py  05_sql_pandas.py
sql/: load_star_schema_postgres.sql
worker/: .env.example  docker-compose.yml
